Added BDD tests for weight calculations

--- a/PlanetWeight/PlanetWeight.csproj
+++ b/PlanetWeight/PlanetWeight.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <AspNetCoreHostingModel>Framework</AspNetCoreHostingModel>
   </PropertyGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" /> <!-- Ensure version compatibility -->
+    <!-- Add other necessary package references -->
+  </ItemGroup>
 
 </Project>
