Specify version for NuGetToolInstaller

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
   inputs:
-    versionSpec: 'latest'
+    versionSpec: '6.11.0'  # Specify an exact version
 
 - task: NuGetCommand@2
   inputs:
